# platform-registry-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  cron.yaml  pull_request.yaml  pull_request_target.yaml  push.yaml  release-image.yml  release.yml  setup-automerge.yml  stale.yml  tag.yaml  test.yaml  test.yml  update-pre-commit.yml
charts/platform-registry/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-registry/templates/: _helpers.tpl  deployment.yml  externalSecret.yaml  ingress.yaml  secrets.yaml  service.yaml
deploy/: README  platformregistryapi.yaml
deploy/platformregistryapi/: Chart.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev-gcp.yaml  values-dev.yaml  values-staging.yaml  values-template.yaml  values.yaml
deploy/platformregistryapi/templates/: platformregistryapi.yml
platform_registry_api/: __init__.py  api.py  auth.py  auth_strategies.py  aws_ecr.py  basic.py  cache.py  config.py  helpers.py  oauth.py  project_deleter.py  registry_client.py  typedefs.py  upstream.py  upstream_client.py  user.py
tests/: Dockerfile  __init__.py  test_utils.sh
tests/docker/: docker-compose.yaml  e2e.compose.yml
tests/docker/docker_auth/: auth_config.yml  server.key  server.pem
tests/docker/registry/: config.yml
tests/e2e/: tests.sh
tests/integration/: conftest.py  conftest_events.py  project_deleter_fixture.sh  test_api.py  test_basic.py  test_project_deleter.py
tests/unit/: conftest.py  test_api.py  test_auth.py  test_aws_ecr.py  test_basic.py  test_cache.py  test_config.py  test_oauth.py  test_proxy_cookies.py  test_upstream_client.py  test_user.py
