[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "platform-registry-api"
version = "0.0.0"
description = "Apolo.us platform registry API"
readme = "README.md"
license = "Proprietary"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.scripts]
platform-registry-api = "platform_registry_api.api:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.dependencies]
python = "^3.13"
aiodns = "^3.2.0"
aiohttp = {version = "^3.11.11", extras = ["speedups"]}
aiohttp-remotes = "^1.3.0"
# cchardet = "^2.1.7"
iso8601 = "^2.1.0"
neuro-auth-client = "^24.8.0"
aiobotocore = "^2.19.0"
neuro-logging = "^25.1.0"
trafaret = "^2.1.1"
yarl = "^1.18.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-aiohttp = "^1.1.0"
pytest-asyncio = "^0.25.3"


#[build-system]
#requires = [
#    "setuptools>=45",
#    "wheel",
#    "setuptools_scm>=6.2",
#]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools_scm]
#
#[tool.black]
#exclude = '''
#/(
#      \.git
#    | venv
#    | __pycache__
#)/
#'''
