[metadata]
name = platform-registry-api
description = Neu.ro platform registry api
url = https://github.com/neuro-inc/platform-registry-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiodns==3.0.0
    aiohttp==3.8.1
    aiohttp-remotes==1.2.0
    cchardet==2.1.7
    iso8601==1.0.2
    neuro-auth-client==21.12.0
    # uvloop 0.15.x has a bug and doesn't work with AWS registry + Kaniko
    # cache: https://github.com/neuro-inc/platform-registry-api/issues/343
    # uvloop 0.15.3 definitely has the bug, but upcoming versions may
    # have it fixed. See the issue above for testing instructions.
    uvloop==0.14.0
    aiobotocore==2.1.0
    neuro-logging==21.12.0
    trafaret==2.1.0
    yarl==1.7.2

[options.entry_points]
console_scripts =
    platform-registry-api = platform_registry_api.api:main

[options.extras_require]
dev =
    mypy==0.920
    pre-commit==2.16.0
    pytest==6.2.5
    pytest-aiohttp==0.3.0
    pytest-asyncio==0.16.0
    types-pkg_resources==0.1.3

[flake8]
max-line-length = 88
exclude =
    .git
    venv
    __pycache__
    .tox
ignore = E203, W503

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
lines_after_imports=2

[tool:pytest]
testpaths = tests
filterwarnings=
    error
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:jose
    ignore:The loop argument is deprecated:DeprecationWarning:

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-setuptools]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_remotes]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-neuro_auth_client]
ignore_missing_imports = true

[mypy-neuro_auth_client.client]
ignore_missing_imports = true

[mypy-neuro_auth_client.bearer_auth]
ignore_missing_imports = true

[mypy-neuro_auth_client.security]
ignore_missing_imports = true

[mypy-botocore]
ignore_missing_imports = true

[mypy-aiobotocore]
ignore_missing_imports = true

[mypy-aiobotocore.client]
ignore_missing_imports = true

[mypy-aiobotocore.session]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true
