[metadata]
name = platform-registry-api
description = Neu.ro platform registry api
url = https://github.com/neuro-inc/platform-registry-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiodns==3.1.1
    aiohttp==3.8.6
    aiohttp-cors==0.7.0
    aiohttp-remotes==1.2.0
    cchardet==2.1.7
    iso8601==2.1.0
    neuro-auth-client==22.6.1
    # uvloop 0.15.x has a bug and doesn't work with AWS registry + Kaniko
    # cache: https://github.com/neuro-inc/platform-registry-api/issues/343
    # uvloop 0.15.3 definitely has the bug, but upcoming versions may
    # have it fixed. See the issue above for testing instructions.
    uvloop==0.19.0
    aiobotocore==2.11.2
    neuro-logging==21.12.2
    trafaret==2.1.1
    yarl==1.9.4

[options.entry_points]
console_scripts =
    platform-registry-api = platform_registry_api.api:main

[options.extras_require]
dev =
    mypy==1.8.0
    pre-commit==3.6.2
    pytest==8.0.2
    pytest-aiohttp==1.0.5
    pytest-asyncio==0.23.5
    types-pkg_resources==0.1.3

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:jose
    ignore:The loop argument is deprecated:DeprecationWarning:

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-setuptools]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_remotes]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-neuro_auth_client]
ignore_missing_imports = true

[mypy-neuro_auth_client.client]
ignore_missing_imports = true

[mypy-neuro_auth_client.bearer_auth]
ignore_missing_imports = true

[mypy-neuro_auth_client.security]
ignore_missing_imports = true

[mypy-botocore]
ignore_missing_imports = true

[mypy-botocore.exceptions]
ignore_missing_imports = true

[mypy-aiobotocore]
ignore_missing_imports = true

[mypy-aiobotocore.client]
ignore_missing_imports = true

[mypy-aiobotocore.session]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true
